# blux-system

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  snapshot.md
docs/: COMPATIBILITY.md  CONTRACT.md  DEPRECATION.md  DETERMINISM.md  ORCHESTRATOR_CONCEPTS.md  PLATFORMS.md  REPLAY.md  RUNBOOK.md
schemas/: execution_receipt.schema.json  replay_report.schema.json  snapshot.schema.json  system_state.schema.json
src/blux_system/: __init__.py  cli.py  core.py
tests/: test_compatibility.py  test_determinism.py  test_replay.py  test_schema_validation.py
tests/fixtures/: receipt_v0_1.json
