[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blux-system"
version = "1.0.0"
description = "Deterministic BLUX system state, snapshot, and receipt tooling."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
  "jsonschema>=4.21.0",
]

[project.scripts]
blux-system = "blux_system.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
